[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Buildings/GelologicalSurvey_front.png" type="Texture" id=1]
[ext_resource path="res://Assets/Characters/pedestrian2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Buildings/GelologicalSurvey_full-open-empty.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buildings/geo_table-reception.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buildings/geo_table-vertical1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Buildings/geo_table-square1.png" type="Texture" id=6]
[ext_resource path="res://GeoBuilding.gd" type="Script" id=7]
[ext_resource path="res://Assets/Buildings/GelologicalSurvey_full-roof.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 291.5, 299.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.5, 357.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 357 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 291, 60 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 98.6875, 4.25 )

[node name="GeoBuilding" type="StaticBody2D"]
script = ExtResource( 7 )

[node name="Building" type="Area2D" parent="."]

[node name="Floor" type="Sprite" parent="Building"]
position = Vector2( 0, -303 )
z_index = -1
texture = ExtResource( 3 )

[node name="Person" type="Sprite" parent="Building"]
position = Vector2( -11, -474 )
z_index = -1
texture = ExtResource( 2 )
hframes = 24

[node name="ReceptionTable" type="Sprite" parent="Building"]
position = Vector2( -12, -457 )
z_index = -1
texture = ExtResource( 4 )

[node name="LeftTableSprite" type="Sprite" parent="Building"]
position = Vector2( -173, -160 )
z_index = -1
texture = ExtResource( 5 )
offset = Vector2( -47, 29 )

[node name="RightTableSprite" type="Sprite" parent="Building"]
position = Vector2( 269, -160 )
z_index = -1
texture = ExtResource( 5 )
offset = Vector2( -47, 29 )

[node name="MidTableSprite" type="Sprite" parent="Building"]
position = Vector2( -5, -145 )
z_index = -1
texture = ExtResource( 6 )

[node name="Front" type="Sprite" parent="Building"]
texture = ExtResource( 1 )

[node name="Roof" type="Sprite" parent="Building"]
position = Vector2( -1, -304 )
z_index = 1
texture = ExtResource( 8 )

[node name="FrontCollision" type="CollisionShape2D" parent="Building"]
position = Vector2( -1.5, -157.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 286.5, -217.5 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -285, -216 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( -3, -515 )
shape = SubResource( 5 )

[node name="InsideDoorCollisionRight" type="CollisionShape2D" parent="."]
position = Vector2( 190.25, 138.5 )
shape = SubResource( 2 )

[node name="InsideCollision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -290, -131, -291, -304, -287, -455, -145, -455, -146, -352, 123, -352, 125, -456, 289, -453, 283, 138, 294, 138, 294, -567, -293, -567, -294, -352, -296, -133, -296, 143, -289, 143 )

[node name="InsideDoorCollisionLeft" type="CollisionShape2D" parent="."]
position = Vector2( -187.313, 137.75 )
shape = SubResource( 2 )

[node name="LeftTableCollision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -173, -303, -174, 36, -265, 36, -264, -303 )

[node name="RightTableCollision" type="CollisionPolygon2D" parent="."]
position = Vector2( 440, 1 )
polygon = PoolVector2Array( -173, -303, -174, 36, -265, 36, -264, -303 )

[node name="MidTableCollision" type="CollisionPolygon2D" parent="."]
position = Vector2( 149, -16 )
polygon = PoolVector2Array( -44, -213, -43, -45, -263, -44, -263, -212 )

[node name="ReceptionTableCollision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -144, -562, -142, -353, 122, -353, 123, -560, 67, -560, 66, -445, -92, -445, -92, -564 )

[connection signal="body_entered" from="Building" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Building" to="." method="_on_Area2D_body_exited"]
